appId: com.react-native
---
- launchApp
- assertVisible: "Test App"
- tapOn: "Invoke Event: Event"
- extendedWaitUntil:
    visible: "Welcome to our Survey!"
    timeout: 60000
- takeScreenshot: TestApp
